--- a/_posts/2017-06-15-pi.md
+++ b/_posts/2017-06-15-pi.md
@@ -58,5 +58,10 @@ now the system always get ip based on the static prescription.
 I wish to use 10m hdmi cable to work with pi camera using tindie flex cable to hdmi converter. it was found that 5m hdmi cable works perfectly fine while 10m would have strong noise. turns out, the noise could be reduced simply by shorten all the flex cable to 5cm. this suggests that high frequence data transimission does require proper cables.
 
 
+4. list of apps to install for pi
 
 
+
+{% highlight bash %}
+apt-get install tmux mplayer tightvncserver rdesktop htop vim git ffmpeg vlc
+{% endhighlight %}
