--- a/_posts/2018-01-22-ffmpeg.md
+++ b/_posts/2018-01-22-ffmpeg.md
@@ -7,3 +7,8 @@ title: ffmpeg skills
 {% highlight bash %}
 ffmpeg -f x11grab -r 1.5 -s 1280x1600 -i :1 -vb 20M out1.avi
 {% endhighlight %}
+
+a better version of this would be 
+{% highlight bash %}
+ffmpeg -f pulse -ac 2 -i default -f x11grab -r 10 -s 1366x768 -i :0.0 -acodec pcm_s16le -vcodec libx264 -preset ultrafast -threads 0 -y output.mkv
+{% endhighlight %}
