--- a/_posts/2018-03-06-webpage.md
+++ b/_posts/2018-03-06-webpage.md
@@ -7,11 +7,11 @@ title: webpage techniques
   i need to update webfiles
 {% highlight bash %}
 inotifywait -q -m -e close_write a |
-while read -r filename event; do
-      DATE=$(date +"%Y_%m_%d_%H_%M")_bacteria_basin_2.jpg
-      cp a tmp
-      mv tmp $DATE
-done
+#while read -r filename event; do
+#      aaDATE=$(date +"%Y_%m_%d_%H_%M")_bacteria_basin_2.jpg
+#      cp a tmp
+#      mv tmp $DATE
+#done
 
 {% endhighlight %}
 
