--- a/_posts/2018-03-06-webpage.md
+++ b/_posts/2018-03-06-webpage.md
@@ -2,10 +2,10 @@
 layout: post
 title: webpage techniques
 ---
+<!---
 
-1. watch files 
-  i need to update webfiles
-{% highlight bash %}
+
+
 inotifywait -q -m -e close_write a |
 #while read -r filename event; do
 #      aaDATE=$(date +"%Y_%m_%d_%H_%M")_bacteria_basin_2.jpg
@@ -13,6 +13,11 @@ inotifywait -q -m -e close_write a |
 #      mv tmp $DATE
 #done
 
+---> 
+1. watch files 
+  i need to update webfiles
+{% highlight bash %}
+date
 {% endhighlight %}
 
 
