--- a/_posts/2018-03-06-webpage.md
+++ b/_posts/2018-03-06-webpage.md
@@ -6,18 +6,17 @@ title: webpage techniques
 
 
 
-inotifywait -q -m -e close_write a |
-#while read -r filename event; do
-#      aaDATE=$(date +"%Y_%m_%d_%H_%M")_bacteria_basin_2.jpg
-#      cp a tmp
-#      mv tmp $DATE
-#done
 
 ---> 
 1. watch files 
   i need to update webfiles
 {% highlight bash %}
-date
+inotifywait -q -m -e close_write a |
+while read -r filename event; do
+      aa=$(date +"%Y_%m_%d_%H_%M")_bacteria_basin_2.jpg
+      cp a tmp
+      mv tmp $aa
+done
 {% endhighlight %}
 
 
