add way to change time zone

--- a/_posts/2017-06-15-pi.md
+++ b/_posts/2017-06-15-pi.md
@@ -60,8 +60,12 @@ I wish to use 10m hdmi cable to work with pi camera using tindie flex cable to h
 
 4. list of apps to install for pi
 
+{% highlight bash %}
+apt-get install tmux mplayer tightvncserver rdesktop htop vim git ffmpeg vlc python-rpi.gpio ipython
+{% endhighlight %}
 
+4. change time zone
 
 {% highlight bash %}
-apt-get install tmux mplayer tightvncserver rdesktop htop vim git ffmpeg vlc
+# dpkg-reconfigure tzdata
 {% endhighlight %}
