--- a/_posts/2017-06-15-pi.md
+++ b/_posts/2017-06-15-pi.md
@@ -69,3 +69,23 @@ apt-get install tmux mplayer tightvncserver rdesktop htop vim git ffmpeg vlc pyt
 {% highlight bash %}
 # dpkg-reconfigure tzdata
 {% endhighlight %}
+5. if arduino code is not correct, it may cause low power for rpi in the logger.
+
+6. a powered arduino connecting a non-powered rpi through usb cable will let rpi powered up.
+
+7. storing a raspberry pi image:
+
+    (a). use gparted to shrink the empty space
+    (b). use 
+{% highlight bash %}
+dd if=/dev/mmcblk0 of=/home/YOUR_USERNAME/Desktop/backup.img bs=1M count=2048
+{% endhighlight %}
+
+to save the file, the size is estimated to be 1M* 2048 for the case above.
+
+
+reference:
+
+https://www.raspberrypi.org/forums/viewtopic.php?f=26&t=5947&start=25
+https://raspberrypi.stackexchange.com/questions/36456/how-to-shrink-an-image-file-after-allocating-full-space
+
