upload the first image

--- a/_posts/2017-06-15-pi.md
+++ b/_posts/2017-06-15-pi.md
@@ -90,3 +90,4 @@ reference:
 https://www.raspberrypi.org/forums/viewtopic.php?f=26&t=5947&start=25
 https://raspberrypi.stackexchange.com/questions/36456/how-to-shrink-an-image-file-after-allocating-full-space
 
+# 7. storing a raspberry pi image:
