--- a/_posts/2018-03-05-webpe.md
+++ b/_posts/2018-03-05-webpe.md
@@ -5,7 +5,7 @@ title: webpage install try
 <!---this is comment---> 
 # 1. making raspberry pi connecting with arduino using gpio without ftdi
   I have been thinking about this a lot and finally got solution:
-![image-title-here](/images/rpi_arduino_serial.jpg){:class="img-responsive"}
+![image](/images/rpi_arduino_serial.jpg)
 
 {% highlight bash %}
 npm install -g phant
