--- a/_posts/2017-06-15-pi.md
+++ b/_posts/2017-06-15-pi.md
@@ -81,9 +81,20 @@ apt-get install tmux mplayer tightvncserver rdesktop htop vim git ffmpeg vlc pyt
 
 {% highlight bash %}
 dd if=/dev/mmcblk0 of=/home/YOUR_USERNAME/Desktop/backup.img bs=1M count=2048
+sync
 {% endhighlight %}
 
 to save the file, the size is estimated to be 1M* 2048 for the case above.
+
+
+when extracting the image to disk first
+{% highlight bash %}
+dd if=/home/YOUR_USERNAME/Desktop/backup.img of=/dev/sdc bs=1M 
+sync
+{% endhighlight %}
+
+and do not forget to use gparted to enlarge your space!
+
 
 reference:
 
