--- a/_posts/2018-02-25-phant.md
+++ b/_posts/2018-02-25-phant.md
@@ -15,6 +15,8 @@ npm install -g phant
 {% highlight bash %}
 vi /usr/local/lib/node_modules/phant/node_modules/phant-manager-http/public/js/src/form.js
 vi  /usr/local/lib/validator.js 
+vi /usr/local/lib/node_modules/phant/node_modules/phant-manager-http/public/js/phant-manager.js
 {% endhighlight %}
+the third one is found to be the game changeer, which i have identified from f12 in chrome 2018-06-15
 
 
