--- a/_posts/2017-06-15-pi.md
+++ b/_posts/2017-06-15-pi.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: raspberry pi function
+title: raspberry pi skills
 ---
 
 # 1. disable internal wifi on boot 2017-06-15 10:35 
@@ -86,7 +86,6 @@ sync
 
 to save the file, the size is estimated to be 1M* 2048 for the case above.
 
-
 when extracting the image to disk first
 {% highlight bash %}
 dd if=/home/YOUR_USERNAME/Desktop/backup.img of=/dev/sdc bs=1M 
@@ -95,10 +94,58 @@ sync
 
 and do not forget to use gparted to enlarge your space!
 
-
 reference:
-
 https://www.raspberrypi.org/forums/viewtopic.php?f=26&t=5947&start=25
 https://raspberrypi.stackexchange.com/questions/36456/how-to-shrink-an-image-file-after-allocating-full-space
 
-# 7. storing a raspberry pi image:
+# 8. use pi as a router:
+
+put the below to /et/dhcpcd.conf, i think the server always need to determine their own IP in the first place
+
+```
+interface wlan0
+    static ip_address=192.168.4.1/24
+```
+
+add the following to /etc/dnsmasq.conf
+```
+interface=wlan0      # Use the require wireless interface - usually wlan0
+  dhcp-range=192.168.4.2,192.168.4.20,255.255.255.0,24h
+```
+
+then add the following to /etc/hostapd/hostapd.conf
+
+```
+interface=wlan0
+driver=nl80211
+ssid=NameOfNetwork
+hw_mode=g
+channel=7
+wmm_enabled=0
+macaddr_acl=0
+auth_algs=1
+ignore_broadcast_ssid=0
+wpa=2
+wpa_passphrase=AardvarkBadgerHedgehog
+wpa_key_mgmt=WPA-PSK
+wpa_pairwise=TKIP
+rsn_pairwise=CCMP
+```
+
+after that, uncomment in /etc/default/hostapd
+
+```
+DAEMON_CONF="/etc/hostapd/hostapd.conf"
+```
+
+finally, restart the services
+
+```
+sudo systemctl start hostapd
+sudo systemctl start dnsmasq
+```
+
+
+reference:
+https://www.raspberrypi.org/documentation/configuration/wireless/access-point.md
+
