--- a/_posts/2017-06-15-pi.md
+++ b/_posts/2017-06-15-pi.md
@@ -106,19 +106,20 @@ put the below to /et/dhcpcd.conf, i think the server always need to determine th
 interface wlan0
     static ip_address=192.168.4.1/24
 ```
+becareful that debian squeeze seems not having this TO180620
 
 add the following to /etc/dnsmasq.conf
 ```
 interface=wlan0      # Use the require wireless interface - usually wlan0
   dhcp-range=192.168.4.2,192.168.4.20,255.255.255.0,24h
 ```
-
+try infinite if one does not want the ip to be expired
 then add the following to /etc/hostapd/hostapd.conf
 
 ```
 interface=wlan0
 driver=nl80211
-ssid=NameOfNetwork
+ssid=hydrogeologger
 hw_mode=g
 channel=7
 wmm_enabled=0
@@ -126,7 +127,7 @@ macaddr_acl=0
 auth_algs=1
 :x
 wpa=2
-wpa_passphrase=AardvarkBadgerHedgehog
+wpa_passphrase=123456123
 wpa_key_mgmt=WPA-PSK
 wpa_pairwise=TKIP
 rsn_pairwise=CCMP
@@ -144,8 +145,27 @@ finally, restart the services
 sudo systemctl start hostapd
 sudo systemctl start dnsmasq
 ```
+the next is to forward the data to one port that is supposed to have internet `eth0` here
 
+/etc/sysctl.conf and uncomment this line:
 
+```
+net.ipv4.ip_forward=1
+```
+
+then run below two commands:
+
+```
+sudo iptables -t nat -A  POSTROUTING -o eth0 -j MASQUERADE
+sudo sh -c "iptables-save > /etc/iptables.ipv4.nat"
+```
+
+save the rules on boot by Edit /etc/rc.local and add this just above "exit 0" to install these rules on boot.
+```
+iptables-restore < /etc/iptables.ipv4.nat
+
+```
+now reboot
 reference:
 https://www.raspberrypi.org/documentation/configuration/wireless/access-point.md
 
