--- a/_posts/2018-07-06-TOUGH.md
+++ b/_posts/2018-07-06-TOUGH.md
@@ -3,7 +3,7 @@ layout: post
 title: TOUGH2 COMPLIE
 ---
 
-# 1. COMPILE TOUGH2
+# 1. COMPILE TOUGH REACT
  {% highlight bash %}
  cp tr-core_v2.087/tr-core/tr-core/core_source/makefiles-flagss/unix-linux/makefile_gf tr-core_v2.087/tr-core/core_source/src/
  cp tr-core_v2.087/tr-core/tr-core/core_source/makefiles-flagss/unix-linux/compile_treact_gfortran tr-core_v2.087/tr-core/core_source/src/
@@ -17,3 +17,17 @@ title: TOUGH2 COMPLIE
  {% endhighlight %}
 
 # 2. use normal lan cable to connect laptop with rpi
+
+
+# 3. tough3   TO 20180927
+ just do the installation according to manual Readme_linux.pdf
+ {% highlight bash %}
+ $ EOS_NUM=eco2n #EOS identifier(eco2n, tmvoc, etc) 
+ $ ./configure.sh --eos=$EOS_NUM --no-x11  # this is not working for tough3 so far
+ $ ./configure.sh --build-type=RELEASE --eos=$EOS_NUM --no-x11 
+ 
+
+ {% endhighlight %}
+
+
+
