modify pi without reimage

--- a/_posts/2017-06-15-pi.md
+++ b/_posts/2017-06-15-pi.md
@@ -169,3 +169,34 @@ now reboot
 reference:
 https://www.raspberrypi.org/documentation/configuration/wireless/access-point.md
 
+# 9. change img file without burning it:
+
+first find out the number of partitions in the file by:
+
+```
+$ /sbin/fdisk -l 2018-06_21_rpi3_stretch_hydrogeolog.img
+Disk 2018-06_21_rpi3_stretch_hydrogeolog.img: 9.8 GiB, 10485760000 bytes, 20480000 sectors
+Units: sectors of 1 * 512 = 512 bytes
+Sector size (logical/physical): 512 bytes / 512 bytes
+I/O size (minimum/optimal): 512 bytes / 512 bytes
+Disklabel type: dos
+Disk identifier: 0xc4b3f138
+
+Device                                   Boot  Start      End  Sectors  Size Id Type
+2018-06_21_rpi3_stretch_hydrogeolog.img1        8192   137215   129024   63M  c W95 FAT32 (LBA)
+2018-06_21_rpi3_stretch_hydrogeolog.img2      **137216** 22067199 21929984 10.5G 83 Linux
+
+```
+
+so the start of the second partition is 137216\*512=70254592
+
+
+
+the way to mount it would be:
+
+```
+mount -o loop,offset=70254592 2018-06_21_rpi3_stretch_hydrogeolog.img /home/user/usb
+```
+
+Reference:
+https://unix.stackexchange.com/questions/82314/how-to-find-the-type-of-an-img-file-and-mount-it
