--- a/_posts/2014-03-03-Router-pi.md
+++ b/_posts/2014-03-03-Router-pi.md
@@ -33,7 +33,7 @@ We are configuring a standalone network to act as a server, so the Raspberry Pi 
 
 To configure the static IP address, edit the dhcpcd configuration file with: 
 ```bash
-sudo nano /etc/dhcpcd.conf
+sudo vim /etc/dhcpcd.conf
 ```
 Go to the end of the file and edit it so that it looks like the following:
 ```
@@ -53,7 +53,7 @@ The DHCP service is provided by dnsmasq. By default, the configuration file cont
 
 ```
 sudo mv /etc/dnsmasq.conf /etc/dnsmasq.conf.orig  
-sudo nano /etc/dnsmasq.conf
+sudo vim /etc/dnsmasq.conf
 ```
 
 Type or copy the following information into the dnsmasq configuration file and save it:
@@ -72,7 +72,7 @@ There are many more options for dnsmasq; see the [dnsmasq documentation](http://
 You need to edit the hostapd configuration file, located at */etc/hostapd/hostapd.conf*, to add the various parameters for your wireless network. After initial install, this will be a new/empty file.
 
 ```bash
-sudo nano /etc/hostapd/hostapd.conf
+sudo vim /etc/hostapd/hostapd.conf
 ```
 
 Add the information below to the configuration file. This configuration assumes we are using channel 7, with a network name of NameOfNetwork, and a password AardvarkBadgerHedgehog. Note that the name and password should **not** have quotes around them. The passphrase should be between 8 and 64 characters in length.
@@ -97,7 +97,7 @@ rsn_pairwise=CCMP
 We now need to tell the system where to find this configuration file.
 
 ```bash
-sudo nano /etc/default/hostapd
+sudo vim /etc/default/hostapd
 ```
 
 Find the line with #DAEMON_CONF, and replace it with this:
@@ -116,12 +116,12 @@ sudo systemctl start dnsmasq
 ```
 ### Add routing and masquerade
 
-Edit /etc/sysctl.conf and uncomment this line:
+Edit **/etc/sysctl.conf** and uncomment this line:
 ```
 net.ipv4.ip_forward=1
 ```
 
-Add a masquerade for outbound traffic on eth0:
+Add a masquerade for outbound traffic on eth0 (outbound **eth0** here mean a network that are permanently connected to internet):
 ```
 sudo iptables -t nat -A  POSTROUTING -o eth0 -j MASQUERADE
 ```
@@ -130,7 +130,7 @@ Save the iptables rule.
 sudo sh -c "iptables-save > /etc/iptables.ipv4.nat"
 ```
 
-Edit /etc/rc.local and add this just above "exit 0" to install these rules on boot.
+Edit **/etc/rc.local** and add this just above "exit 0" to install these rules on boot.
 ```
 iptables-restore < /etc/iptables.ipv4.nat
 ```
@@ -166,7 +166,7 @@ sudo systemctl stop hostapd
 Bridging creates a higher-level construct over the two ports being bridged. It is the bridge that is the network device, so we need to stop the `eth0` and `wlan0` ports being allocated IP addresses by the DHCP client on the Raspberry Pi.
 
 ```
-sudo nano /etc/dhcpcd.conf
+sudo vim /etc/dhcpcd.conf
 ```
 
 Add `denyinterfaces wlan0` and `denyinterfaces eth0` to the end of the file (but above any other added `interface` lines) and save the file.
@@ -183,7 +183,7 @@ Connect the network ports. In this case, connect `eth0` to the bridge `br0`.
 sudo brctl addif br0 eth0
 ```
 
-Now the interfaces file needs to be edited to adjust the various devices to work with bridging. `sudo nano /etc/network/interfaces` make the following edits.
+Now the interfaces file needs to be edited to adjust the various devices to work with bridging. `sudo vim /etc/network/interfaces` make the following edits.
 
 Add the bridging information at the end of the file.
 
